Changelog:

V1.21 June X 2017

	* Implemented skew compensation pre-processor

V1.20 June 6 2017

	* Fixes settings that have invalid values when they are saved
	* Implemented latest useful changes from M3D's official software
	* Fixed issue where 'Update firmware from file' button disappeared
	* Fixed issue with flashing firmware ROMs that have an uneven number of bytes
	* Updated iMe firmware to version V00.00.01.24

V1.19 June 1 2017

	* Last slicer selected will be set as the default slicer so you dont have to keep reselecting it
	* Model editor now updates the model's Y positions in real time when they are being rotated or scaled
	* Profile editor and model editor can now save a copy of the profile/model that's currently being edited directly to the server
	* Slicer profiles can be edited in OctoPrint's settings
	* Slicer profiles can import a default profile that's provided by the slicer's plugin
	* G-code and model files can be edited by clicking the edit buttons in the file list
	* Fixed issue where connecting to a Micro 3D printer would hang while while responding with 'rs 0'
	* Added M33 Fio announcements to OctoPrint's announcements plugin
	* Made model editor's controls more intuitive
	* Fixed issue where backlash calibration prints wouldn't print

V1.18 April 26 2017

	* Fixed problems related to OS not having certain environmental variables
	* Settings now have Micro 3D printer support disabled by default. If your using a Micro 3D printer then disable the Settings > M33 Fio > "Not using a Micro 3D printer" setting
	* Made slicer profile editor's settings independent of filament type used
	* Fixed compatibility with OctoPrint V1.3.2. Thanks foosel!
	* Installers work with OctoPrint V1.3.2. Tested on Windows 10, macOS Sierra, and Ubuntu 17.04
	* Fixed webcam hosting on macOS Sierra
	* OctoPrint instance manager can now create instances using provided settings
	* Upgraded backlash calibration to Muele's Quick Backlash Calibration V2. Thanks Muele!
